--- a/src/app/nichos/configuracion-footer/configuracion-footer.component.html
+++ b/src/app/nichos/configuracion-footer/configuracion-footer.component.html
@@ -54,8 +54,8 @@
         <div class="col-12">
             <div class="card">
                 <h5>Footer</h5>
-                <div class="col-12 p-message p-message-success" *ngFor="let footer of listadoFooter">
-                    {{footer.name}}
+                <div class="col-12 p-message p-message-success" *ngFor="let f of dataFooter.footer">
+                    {{f.name}}
                 </div>
             </div>
         </div>
