--- a/src/app/nichos/listados-noticias-categoria/listados-noticias-categoria.component.html
+++ b/src/app/nichos/listados-noticias-categoria/listados-noticias-categoria.component.html
@@ -17,7 +17,8 @@
                 <div class="col-12">
                     <button pButton pRipple type="button"
                             class="p-button-outlined p-button-info" 
-                            label="Alta Noticia"></button>
+                            label="Alta Noticia"
+                            (click)="irAltaNoticia()"></button>
                 </div>
             </div>
         </div>
