--- a/src/app/nichos/configuracion-general/configuracion-general.component.html
+++ b/src/app/nichos/configuracion-general/configuracion-general.component.html
@@ -34,6 +34,7 @@
         </div>
         <div class="col-12">
             <div class="card">
+                <h5>Agregar el domino del sitio sin diagonal al final</h5>
                 <div class="field col-12">
                     <span class="p-float-label">
                         <input
